--- a/async.html
+++ b/async.html
@@ -1,35 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>async await</title>
-</head>
-<body>
-    <ul id="myList">
 
-    </ul>
+    <style>
+        .class-flex {
+            display: flex;
+        }
+
+        .class-flex>div {
+
+            padding: 2em 2em;
+        }
+    </style>
+</head>
+
+<body>
+
+    <div class="class-flex">
+        <div>
+            <ul id="myList">
+                <h2>Name</h2>
+
+            </ul>
+        </div>
+        <div>
+            <ul id="user-name">
+                <h2>UserName</h2>
+
+            </ul>
+        </div>
+        <div id="email-list">
+            <ul id="email-id">
+                <h2>Mail list</h2>
+
+            </ul>
+        </div>
+        <div>
+            <ul id="website-list">
+                <h2>Website List</h2>
+
+            </ul>
+        </div>
+        <div>
+            <ul id="phone-list">
+                <h2>Phone number</h2>
+
+            </ul>
+        </div>
+    </div>
 
     <script>
 
-    //    async function hello(name) {
-    //         return "hello" + " " + name;
-    //     }
-    //     const greeting = hello("mafia");
-    //     console.log(greeting);
-    //     greeting.then(res => console.log(res))
+        //    async function hello(name) {
+        //         return "hello" + " " + name;
+        //     }
+        //     const greeting = hello("mafia");
+        //     console.log(greeting);
+        //     greeting.then(res => console.log(res))
 
-    async function loadData() {
-        const response = await fetch("https://jsonplaceholder.typicode.com/users");
-        const data = await response.json();
-        // displayData(data)
-        return data;
-    }
+        async function loadData() {
+            const response = await fetch("https://jsonplaceholder.typicode.com/users");
+            const data = await response.json();
+            // displayData(data)
+            return data;
+        }
 
-    loadData().then(data => {
-        displayData(data)
-    });
+        loadData().then(data => {
+            displayData(data)
+        });
 
 
         // function loadData() {
@@ -42,14 +85,38 @@
         // loadData()
         function displayData(data) {
             const parentNode = document.getElementById('myList');
-            for(let i = 0 ; i <data.length ; i++) {
+            const emailNode = document.getElementById("email-id");
+            const userNameNode = document.getElementById("user-name");
+            const websiteNode = document.getElementById("website-list");
+            const phoneNode = document.getElementById("phone-list");
+            console.log(data);
+            for (let i = 0; i < data.length; i++) {
                 const name = data[i].name;
+                const email = data[i].email;
+                const username = data[i].username;
+                const website = data[i].website;
+                const phone = data[i].phone;
                 const li = document.createElement("li");
+                const email_li = document.createElement("li");
+                const userNameLi = document.createElement("li");
+                const websiteLi = document.createElement("li");
+                const phoneLi = document.createElement("li");
                 li.innerText = name;
+                email_li.innerText = email;
+                userNameLi.innerText = username;
+                websiteLi.innerText = website;
+                phoneLi.innerText = phone;
                 parentNode.appendChild(li);
+                emailNode.appendChild(email_li);
+                userNameNode.appendChild(userNameLi);
+                websiteNode.appendChild(websiteLi);
+                phoneNode.appendChild(phoneLi);
             }
         }
+      //fetching
+
     </script>
-    
+
 </body>
+
 </html>
